deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fjord-deployment
  namespace: stock
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: fjord 
  template:
    metadata:
      annotations:
        git-tag: "v104"
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/api/metrics"
      labels:
        app: fjord 
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: regcred
      containers:
        - name: fjord 
          image: artifacts.tekuro.io/fjord:latest
