deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fjord-service
  namespace: stock
spec:
  selector:
    app: fjord 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
