deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fjord-ingress
  namespace: stock
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: fjord.tekuro.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fjord-service
            port:
              number: 80
